[gd_scene load_steps=19 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerControl.gd" type="Script" id=2]
[ext_resource path="res://Sprites/IMG_0894.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/IMG_0902.PNG" type="Texture" id=4]
[ext_resource path="res://prefabs i guess/EVIL BOI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/Hit_Hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Jump.wav" type="AudioStream" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "IMG_0894.PNG 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="GDScript" id=4]
script/source = "extends	Area2D


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64.7827, 94.0603 )

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Torso/RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso/RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.4527, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso/LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -139.279, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Torso/LeftArm/HandHitArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "defence"
tracks/0/type = "value"
tracks/0/path = NodePath("Torso/RightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso/RightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 165.195 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso/LeftArm:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso/LeftArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -168.902 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.682373, -0.409424 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso/LeftLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20.5449, 277.258 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso/LeftLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Torso/RightLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -90.998, 286.694 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Torso/RightLeg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso/LeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 158.879, -101.987 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Torso/LeftArm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso/Head:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 9.84229, -362.119 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Torso/Head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Torso/RightArm:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -140.907, -113.527 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Torso/RightArm:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso/Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Torso/RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Torso/RightArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 76.0394, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso/LeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Torso/LeftArm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -69.4627, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso/RightLeg:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Torso/RightLeg:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 67.077, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Torso/LeftLeg:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Torso/LeftLeg:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -39.4973, 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.682373, -0.409424 ), Vector2( 0.682373, -0.409424 ), Vector2( 0.682373, -0.409424 ), Vector2( 0.682, -0.409 ), Vector2( 0.682373, -0.409424 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Torso/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9.84229, -362.119 ), Vector2( 9.84229, -362.119 ), Vector2( 9.84229, -362.119 ), Vector2( 9.84229, -362.119 ), Vector2( 9.84229, -362.119 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Torso/Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Torso/RightArm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ), Vector2( -140.907, -113.527 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Torso/RightArm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.5997, 0.0, -35.6, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Torso/LeftArm:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ), Vector2( 158.879, -101.987 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Torso/LeftArm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -37.1351, 0.0, 37.1, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Torso/RightLeg:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ), Vector2( -90.998, 286.694 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Torso/RightLeg:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 28.4974, 0.0, -28.5, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Torso/LeftLeg:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ), Vector2( 20.5449, 277.258 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Torso/LeftLeg:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -41.4728, 0.0, 41.5, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 19.0986, 64.6153 )

[node name="Node2D" type="Node2D"]
position = Vector2( 59.9417, -32.3494 )

[node name="Blocks" type="TileMap" parent="."]
tile_set = SubResource( 3 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( -524278, 1, 0, -524277, 1, 0, -524276, 1, 0, -524275, 1, 0, -524274, 1, 0, -524273, 1, 0, -524272, 1, 0, -524271, 1, 0, -524270, 1, 0, -524269, 1, 0, -524268, 1, 0, -524267, 1, 0, -524266, 1, 0, -524265, 1, 0, -524264, 1, 0, -524263, 1, 0, -524262, 1, 0, -458742, 1, 0, -458726, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 1, 0, -393206, 1, 0, -393190, 1, 0, -327680, 1, 0, -327654, 1, 0, -262144, 1, 0, -262129, 1, 0, -262118, 1, 0, -196608, 1, 0, -196594, 1, 0, -196593, 1, 0, -196582, 1, 0, -131072, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65510, 1, 0, 0, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 65536, 1, 0, 65546, 1, 0, 65568, 1, 0, 131072, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131104, 1, 0, 196608, 1, 0, 196624, 1, 0, 196640, 1, 0, 262144, 1, 0, 262160, 1, 0, 262161, 1, 0, 262166, 1, 0, 262176, 1, 0, 327680, 1, 0, 327701, 1, 0, 327702, 1, 0, 327712, 1, 0, 393216, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 458752, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 413.049, 436.728 )
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -503.036, -300.238 )
anchor_mode = 0
current = true

[node name="Torso" type="Sprite" parent="Player"]
position = Vector2( 0.682373, -0.409424 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 90, 400, 331.564, 425 )

[node name="Head" type="Sprite" parent="Player/Torso"]
position = Vector2( 9.84229, -362.119 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 54.063, 0, 284.183, 335.073 )

[node name="RightArm" type="Sprite" parent="Player/Torso"]
position = Vector2( -140.907, -113.527 )
texture = ExtResource( 4 )
offset = Vector2( -6.65576, 178.611 )
region_enabled = true
region_rect = Rect2( 539.558, 61.7515, 212.386, 539.784 )

[node name="LeftArm" type="Sprite" parent="Player/Torso"]
position = Vector2( 158.879, -101.987 )
scale = Vector2( -1, 1 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 31.6304, 155.17 )
region_enabled = true
region_rect = Rect2( 539.558, 61.7515, 212.386, 539.784 )

[node name="HandHitArea" type="Area2D" parent="Player/Torso/LeftArm"]
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Torso/LeftArm/HandHitArea"]
position = Vector2( -4.63086, 337.343 )
shape = SubResource( 5 )
disabled = true

[node name="RightLeg" type="Sprite" parent="Player/Torso"]
position = Vector2( -90.998, 286.694 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 10.9248, 180.635 )
region_enabled = true
region_rect = Rect2( 447.849, 603.639, 258.281, 619.934 )

[node name="LeftLeg" type="Sprite" parent="Player/Torso"]
position = Vector2( 20.5449, 277.258 )
z_index = -2
texture = ExtResource( 4 )
offset = Vector2( 11.3635, 188.577 )
region_enabled = true
region_rect = Rect2( 447.849, 603.639, 258.281, 619.934 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/attack = SubResource( 6 )
anims/defence = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/run = SubResource( 10 )
blend_times = [ "attack", "attack", 0.2, "attack", "defence", 0.2, "attack", "idle", 0.2, "attack", "jump", 0.2, "attack", "run", 0.2 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -0.690582, 12.4363 )
shape = SubResource( 11 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 6 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 7 )

[node name="EVIL BOI" parent="." instance=ExtResource( 5 )]
position = Vector2( 1590.42, 284.864 )

[node name="EVIL BOI2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1310.28, -222.075 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Node" parent="CanvasLayer"]

[node name="Health" type="Label" parent="CanvasLayer/GUI"]
margin_right = 63.0
margin_bottom = 16.0
rect_scale = Vector2( 3.31907, 3.57986 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Health: 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Player/Torso/LeftArm/HandHitArea" to="Player" method="_on_HandHitArea_body_entered"]
